--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Zhi Ye">
-    <meta name="description" content="description of your page">
+    <meta name="description" content="This is a simple web page describing my favorite fictional character that I admire, which is Patrick Star!">
     <title>Patrick Star</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Patrick Star</h1>
     <img src="img/patrickstar.png" alt="Patrick Star Smiling">
+    <!-- Paragraph describing Patrick Star -->
     <p>
         <a href="https://en.wikipedia.org/wiki/Patrick_Star"> Patrick Star</a> is one of the ten main characters from the animated series <cite>Spongebob Squarepants</cite>.
         He is a pink starfish that lives under a rock in the underwater city of Bikini Bottom. Patrick loves to
         hang out with his best friend, Spongebob Squarepants. Together, they make the most of the day with fun
         activities and adventures!
     </p>
+    <!-- Reasons for my admiration of Patrick Star -->
     <p>
         Why I admired Patrick Star:
         <ul>
